--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import './vendor/normalize.css';
+@import './vendor/fonts/inter/inter.css';
+@import './blocks/body/body.css';
+@import './blocks/page/page.css';
+@import './blocks/login/login.css';
+@import './blocks/login/__form/login__form.css';
+@import './blocks/login/__heading/login__heading.css';
+@import './blocks/login/__input/login__input.css';
+@import './blocks/login/__button/login__button.css';
+@import './blocks/login/__signin/login__signin.css';
+@import './blocks/login/__text/login__text.css';
+@import './blocks/login/__link/login__link.css';
+@import './blocks/header/header.css';
+@import './blocks/header/__logo/header__logo.css';
+@import './blocks/profile/profile.css';
+@import './blocks/profile/__avatar-container/profile__avatar-container.css';
+@import './blocks/profile/__avatar-button/profile__avatar-button.css';
+@import './blocks/profile/__info/profile__info.css';
+@import './blocks/profile/__edit-container/profile__edit-container.css';
+@import './blocks/profile/__name/profile__name.css';
+@import './blocks/profile/__edit-button/profile__edit-button.css';
+@import './blocks/profile/__edit-button-image/profile__edit-button-image.css';
+@import './blocks/profile/__description/profile__description.css';
+@import './blocks/profile/__add-button/profile__add-button.css';
+@import './blocks/profile/__add-button-image/profile__add-button-image.css';
+@import './blocks/elements/elements.css';
+@import './blocks/element/element.css';
+@import './blocks/element/__delete-button/element__delete-button.css';
+@import './blocks/element/__delete-button/_visible/element__delete-button_visible.css';
+@import './blocks/element/__image/element__image.css';
+@import './blocks/element/__name-container/element__name-container.css';
+@import './blocks/element/__name/element__name.css';
+@import './blocks/element/__like-container/element__like-container.css';
+@import './blocks/element/__like-button/element__like-button.css';
+@import './blocks/element/__like-button/_active/element__like-button_active.css';
+@import './blocks/element/__like-count/element__like-count.css';
+@import './blocks/footer/footer.css';
+@import './blocks/footer/__copyright/footer__copyright.css';
+@import './blocks/popup/popup.css';
+@import './blocks/popup/_opened/popup_opened.css';
+@import './blocks/popup/__container/popup__container.css';
+@import './blocks/popup/__heading/popup__heading.css';
+@import './blocks/popup/__input/popup__input.css';
+@import './blocks/popup/__input/_type/popup__input_type_error.css';
+@import './blocks/popup/__input-error/popup__input-error.css';
+@import './blocks/popup/__save-button/popup__save-button.css';
+@import './blocks/popup/__save-button/_disabled/popup__save-button_disabled.css';
+@import './blocks/popup/__close-button/popup__close-button.css';
+@import './blocks/popup/__close-icon/popup__close-icon.css';
+@import './blocks/popup-image/popup-image.css';
+@import './blocks/popup-image/__container/popup-image__container.css';
+@import './blocks/popup-image/__image/popup-image__image.css';
+@import './blocks/popup-image/__name/popup-image__name.css';
