feat: добавить регистрацию

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
 @import './blocks/login/__link/login__link.css';
 @import './blocks/header/header.css';
 @import './blocks/header/__logo/header__logo.css';
+@import './blocks/header/__info-container/header__info-conteiner.css';
+@import './blocks/header/__text/header__text.css';
+@import './blocks/header/__button/header__button.css';
+@import './blocks/header/__button/_type/header__button_type_exit.css';
 @import './blocks/profile/profile.css';
 @import './blocks/profile/__avatar-container/profile__avatar-container.css';
 @import './blocks/profile/__avatar-button/profile__avatar-button.css';
@@ -39,14 +43,18 @@
 @import './blocks/popup/popup.css';
 @import './blocks/popup/_opened/popup_opened.css';
 @import './blocks/popup/__container/popup__container.css';
+@import './blocks/popup/__container/_type/popup__container_type_notice.css';
 @import './blocks/popup/__heading/popup__heading.css';
+@import './blocks/popup/__heading/_type/popup__heading_type_notice.css';
 @import './blocks/popup/__input/popup__input.css';
 @import './blocks/popup/__input/_type/popup__input_type_error.css';
 @import './blocks/popup/__input-error/popup__input-error.css';
 @import './blocks/popup/__save-button/popup__save-button.css';
 @import './blocks/popup/__save-button/_disabled/popup__save-button_disabled.css';
 @import './blocks/popup/__close-button/popup__close-button.css';
+@import './blocks/popup/__close-button/_type/popup__close-button_type_notice.css';
 @import './blocks/popup/__close-icon/popup__close-icon.css';
+@import './blocks/popup/__image/popup__image.css';
 @import './blocks/popup-image/popup-image.css';
 @import './blocks/popup-image/__container/popup-image__container.css';
 @import './blocks/popup-image/__image/popup-image__image.css';
