--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,6 +3,9 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin: 0 auto;
   padding-bottom: 41px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 @media screen and (max-width: 450px) {
