feat: добавить меню

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,14 +2,11 @@
   max-width: 880px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin: 0 auto;
-  padding-bottom: 41px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  padding: 45px 0 41px;
 }
 
 @media screen and (max-width: 450px) {
   .header {
-    padding: 0 0 32px 27px;
+    padding: 0;
   }
 }
