--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -4,18 +4,17 @@
   -moz-osx-font-smoothing: grayscale;
   font-style: normal;
   font-weight: normal;
-  padding-top: 45px;
   color: white;
 }
 
 @media screen and (max-width: 920px) {
   .page {
-    padding: 45px 20px 0;
+    padding: 0 20px 0;
   }
 }
 
 @media screen and (max-width: 450px) {
   .page {
-    padding: 28px 0 0;
+    padding: 0;
   }
 }
