--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,14 @@
 @import './blocks/login/__text/login__text.css';
 @import './blocks/login/__link/login__link.css';
 @import './blocks/header/header.css';
+@import './blocks/header/__container/header__container.css';
+@import './blocks/header/__menu-button/header__menu-button.css';
+@import './blocks/header/__menu-button/_type/header__menu-button_type_close.css';
+@import './blocks/header/__menu/header__menu.css';
+@import './blocks/header/__menu/_opened/header__menu_opened.css';
 @import './blocks/header/__logo/header__logo.css';
 @import './blocks/header/__info-container/header__info-conteiner.css';
+@import './blocks/header/__info-container/_hidden/header__info-container_hidden.css';
 @import './blocks/header/__text/header__text.css';
 @import './blocks/header/__button/header__button.css';
 @import './blocks/header/__button/_type/header__button_type_exit.css';
